phf_macros_tests/tests/compile-fail/bad-syntax.stderr
error: expected identifier
 --> tests/compile-fail/bad-syntax.rs:5:5
  |
5 |     => //~ ERROR expected identifier
  |     ^^
  |
  = note: this error originates in the macro `proc_macro_call` (in Nightly builds, run with -Z macro-backtrace for more info)
